--- a/part3/notes-backend/package.json
+++ b/part3/notes-backend/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "build:ui": "rm -rf dist && cd ../../part2/notes-frontend && npm run build && cp -r dist ../../part3/notes-backend"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
