--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build:ui": "rm -rf dist && cd ../../part2/phonebook-frontend && npm run build && cp -r dist ../../part3/phonebook-backend"
   },
   "dependencies": {
     "express": "^5.1.0",
