--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -13,7 +13,9 @@
     "build:ui": "rm -rf dist && cd ../../part2/phonebook-frontend && npm run build && cp -r dist ../../part3/phonebook-backend"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^8.19.1",
     "morgan": "^1.10.1"
   }
 }
