--- a/part3/notes-backend/package.json
+++ b/part3/notes-backend/package.json
@@ -12,6 +12,8 @@
     "build:ui": "rm -rf dist && cd ../../part2/notes-frontend && npm run build && cp -r dist ../../part3/notes-backend"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^8.19.1"
   }
 }
