--- a/part3/notes-backend/package.json
+++ b/part3/notes-backend/package.json
@@ -9,11 +9,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "node --watch index.js",
+    "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/notes-frontend && npm run build && cp -r dist ../../part3/notes-backend"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0"
   }
 }
