--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch index.js",
     "start": "node index.js",
+    "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook-frontend && npm run build && cp -r dist ../../part3/phonebook-backend"
   },
   "dependencies": {
@@ -17,5 +18,10 @@
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.37.0"
   }
 }
