--- a/part4/blog-backend/package.json
+++ b/part4/blog-backend/package.json
@@ -7,12 +7,13 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "node --test",
-    "dev": "node --watch index.js",
-    "start": "node index.js",
+    "test": "cross-env NODE_ENV=test node --test",
+    "dev": "cross-env NODE_ENV=development node --watch index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
     "lint": "eslint ."
   },
   "dependencies": {
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
@@ -22,6 +23,7 @@
     "@eslint/js": "^9.37.0",
     "@stylistic/eslint-plugin-js": "^4.4.1",
     "eslint": "^9.37.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "supertest": "^7.1.4"
   }
 }
