--- a/part3/notes-backend/package.json
+++ b/part3/notes-backend/package.json
@@ -6,21 +6,26 @@
   "author": "melbs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "node --watch index.js",
+    "test": "cross-env NODE_ENV=test node --test",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development node --watch index.js",
     "lint": "eslint .",
-    "build:ui": "rm -rf dist && cd ../../part2/notes-frontend && npm run build && cp -r dist ../../part3/notes-backend"
+    "build:ui": "rm -rf dist && cd ../../part2/notes-frontend && npm run build && cp -r dist ../../part3/notes-backend",
+  "start:test": "cross-env NODE_ENV=test node --watch index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@stylistic/eslint-plugin-js": "^4.4.1",
+    "cross-env": "^10.1.0",
     "eslint": "^9.37.0",
-    "globals": "^16.4.0"
+    "globals": "^16.4.0",
+    "supertest": "^7.1.4"
   }
 }
