--- a/part4/blog-backend/package.json
+++ b/part4/blog-backend/package.json
@@ -10,6 +10,7 @@
     "test": "cross-env NODE_ENV=test node --test",
     "dev": "cross-env NODE_ENV=development node --watch index.js",
     "start": "cross-env NODE_ENV=production node index.js",
+    "start:test": "cross-env NODE_ENV=test node --watch index.js",
     "lint": "eslint ."
   },
   "dependencies": {
