--- a/part7/blog-app/blog-frontend-react-query-and-context/package.json
+++ b/part7/blog-app/blog-frontend-react-query-and-context/package.json
@@ -11,27 +11,27 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.6",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "vitest": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.25.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "jsdom": "^27.0.1",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "jsdom": "^27.0.1",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   }
 }
