--- a/part7/blog-app/blog-frontend-react-query-and-context/package.json
+++ b/part7/blog-app/blog-frontend-react-query-and-context/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.9.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
