--- a/part8/library-backend-graphql/package.json
+++ b/part8/library-backend-graphql/package.json
@@ -14,7 +14,14 @@
     "dotenv": "^17.2.3",
     "graphql": "^16.12.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose-unique-validator": "^4.0.1"
+    "mongoose-unique-validator": "^4.0.1",
+    "@as-integrations/express5": "^1.1.2",
+    "@graphql-tools/schema": "^10.0.27",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.6",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
