--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -27,6 +27,7 @@
     "typescript-eslint": "^8.46.4"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid": "^13.0.0"
   }
 }
