--- a/part9/patientor/package.json
+++ b/part9/patientor/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@mui/x-date-pickers": "^8.18.0",
     "axios": "^1.5.1",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
