Complete up to exercise 9.30. Installed cors and @types/cors too

--- a/part9/patientor-backend/package.json
+++ b/part9/patientor-backend/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@stylistic/eslint-plugin": "^5.5.0",
+    "@types/cors": "^2.8.19",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
@@ -27,6 +28,7 @@
     "typescript-eslint": "^8.46.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
